--- a/index.css
+++ b/index.css
@@ -1,78 +1,105 @@
 
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f8f8f8;
-}
-
-.container {
+ }
+ 
+ 
+ .container {
     max-width: 600px;
     margin: 50px auto;
     background-color: #fff;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.screen {
+ }
+ 
+ 
+ .screen {
     display: block;
-}
-
-.question {
+ }
+ 
+ 
+ .question {
     margin-bottom: 20px;
-}
-
-.question label {
+ }
+ 
+ 
+ .question label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
-}
-
-.text-input {
+ }
+ 
+ 
+ .text-input1,.text-input2 {
     width: 90%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: rgb(192, 187, 187);
     font-weight: bold;
-}
-.select-box{
+ }
+ .select-box1,.select-box2{
     width: 90%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: rgb(192, 187, 187);
     font-weight: bold;
-}
-.radio-options {
+ }
+ .radio-options1,.radio-options2 {
     display: flex;
     align-items: center;
-}
-
-.radio-input {
+ }
+ 
+ 
+ .radio-input1,.radio-input2 {
     margin-right: 5px;
-}
-
-.progress-bar {
+ }
+ 
+ 
+ .progress-bar {
     width: 0;
     height: 10px;
     background-color: #4caf50;
     margin-top: 20px;
     border-radius: 5px;
     transition: width 0.3s ease;
-}
-
-.radio-labels {
+ }
+ 
+ 
+ .radio-labels {
     display: inline-block;
     margin-right: 10px; /* Adjust as needed */
     color: #888; /* Placeholder text color */
-}
-
-.radio-input {
+ }
+ 
+ 
+ .radio-input1,.radio-input2 {
     margin-right: 5px; /* Adjust as needed */
-}
-
-.radio-input:checked + .radio-labels {
+ }
+ 
+ 
+ .radio-input1:checked + .radio-labels,.radio-input2:checked + .radio-labels {
     color: black; /* Adjust to change color when selected */
-}
+ }
+ 
+ 
+ .backButton{
+    cursor: pointer;
+    background-color: rgb(255, 140, 0);
+    color: white;
+    border: none;
+    outline: none;
+    padding: 0.4rem 1rem;
+    border-radius: 7px;
+    font-weight: bold;
+ }
+ 
+ 
+ 
+ 
